--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">BinSRC</string>
-    <string name="button_text">Найти информацию по bin</string>
+    <string name="button_text">Search info</string>
+    <string name="label_text">Write 8-digit BIN</string>
 </resources>
