--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">BinSRC</string>
     <string name="button_text">Search info</string>
     <string name="label_text">Write 8-digit BIN</string>
+    <string name="unknown_code">Unknown response code: </string>
+    <string name="invalid_bin">Invalid Bin code</string>
 </resources>
