--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="label_text">Write 8-digit BIN</string>
     <string name="unknown_code">Unknown response code: </string>
     <string name="invalid_bin">Invalid Bin code</string>
+    <string name="not_found">This BIN code not found</string>
 </resources>
