--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="unknown_code">Unknown response code: </string>
     <string name="invalid_bin">Invalid Bin code</string>
     <string name="not_found">This BIN code not found</string>
+    <string name="no_data">No data available for this BIN</string>
 </resources>
