Update blocks Some BIN's had incorrect null blocks +partical translate

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,4 +6,5 @@
     <string name="invalid_bin">Неправильный код BIN</string>
     <string name="not_found">Подобный BIN не обнаружен</string>
     <string name="no_data">Не имеется данных по этому BIN</string>
+    <string name="main_info">"Основная информация: "</string>
 </resources>
