--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="invalid_bin">Invalid Bin code</string>
     <string name="not_found">This BIN code not found</string>
     <string name="no_data">No data available for this BIN</string>
+    <string name="main_info">"Main info: "</string>
 </resources>
