--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,5 +6,18 @@
     <string name="invalid_bin">Неправильный код BIN</string>
     <string name="not_found">Подобный BIN не обнаружен</string>
     <string name="no_data">Не имеется данных по этому BIN</string>
-    <string name="main_info">"Основная информация: "</string>
+    <string name="bin_code">BIN код</string>
+    <string name="scheme">Платёжная система</string>
+    <string name="brand">Бренд карты</string>
+    <string name="card_number">Номер карты</string>
+    <string name="card_number_length">Длина</string>
+    <string name="card_number_luhn">Луна</string>
+    <string name="type">Тип</string>
+    <string name="prepaid">Предоплачено</string>
+    <string name="country">Страна</string>
+    <string name="latitude">"(широта: "</string>
+    <string name="longitude">", долгота: "</string>
+    <string name="currency">Валюта</string>
+    <string name="bank">Банк</string>
+    <string name="empty_history">Нет данных</string>
 </resources>
