--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,18 @@
     <string name="invalid_bin">Invalid Bin code</string>
     <string name="not_found">This BIN code not found</string>
     <string name="no_data">No data available for this BIN</string>
-    <string name="main_info">"Main info: "</string>
+    <string name="bin_code">BIN code</string>
+    <string name="scheme">Scheme/Network</string>
+    <string name="brand">Card brand</string>
+    <string name="card_number">Card number</string>
+    <string name="card_number_length">Length</string>
+    <string name="card_number_luhn">Luhn</string>
+    <string name="type">Type</string>
+    <string name="prepaid">Prepaid</string>
+    <string name="country">Country</string>
+    <string name="latitude">"(latitude: "</string>
+    <string name="longitude">, longitude: </string>
+    <string name="currency">Currency</string>
+    <string name="bank">Bank</string>
+    <string name="empty_history">No data</string>
 </resources>
