--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,8 +15,8 @@
     <string name="type">Тип</string>
     <string name="prepaid">Предоплачено</string>
     <string name="country">Страна</string>
-    <string name="latitude">"(широта: "</string>
-    <string name="longitude">", долгота: "</string>
+    <string name="latitude">широта</string>
+    <string name="longitude">долгота</string>
     <string name="currency">Валюта</string>
     <string name="bank">Банк</string>
     <string name="empty_history">Нет данных</string>
